--- a/site/cadastro.html
+++ b/site/cadastro.html
@@ -17,7 +17,7 @@
                     <h1 class="titulo__h1">Drift King</h1>
             </div>
                 <ul>
-                    <li><a href="inicio.html">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="sobre_nos.html">Sobre Nós</a></li>
                     <li><a href="login.html">Login</a></li>
                     <li><a href="#">Cadastro</a></li>
